--- a/src/assets/styles/header/style.css
+++ b/src/assets/styles/header/style.css
@@ -18,3 +18,28 @@
     margin-right: 6em;
     font-weight: light;
 }
+
+@media screen and (min-width: 768px) {
+    .header {
+        padding: 3em;
+    }
+
+    .header > .profile-header {
+        width: 64px;
+        height: 64px;
+    }
+
+    .header > .title-profile {
+        font-size: 2.5em;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .header {
+        margin-left: 17em;
+    }
+
+    .header > .title-profile {
+        margin-right: 8em;
+    }
+}
