--- a/src/assets/styles/technologyQuiz/style.css
+++ b/src/assets/styles/technologyQuiz/style.css
@@ -114,3 +114,23 @@
   background: rgb(2, 186, 124);
   margin-left: 1em;
 }
+
+@media screen and (min-width: 768px) {
+  .header-technology-quiz > .title-header {
+    font-size: 1.7rem;
+  }
+
+  .main-container > .title-main {
+    font-size: 1.7rem;
+  }
+
+  .main-container > .alternatives-quiz > li {
+    padding: 1em 6em;
+    font-size: 1.5rem;
+  }
+
+  .main-container > .buttons-options > button {
+    font-size: 1.2rem;
+    padding: 1em 2em
+  }
+}
